--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -288,7 +288,7 @@ The full correction is calculated as
 \label{efficiency}
 	{\cal E}(\theta_y^*) = {1\over 1 - \left( \sum\limits_{i\in \rm RPs} {\cal I}^i_{3/4}(\theta_y^*) + 2 {\cal I}_{2/4} \right) } \ .
 \end{equation}
-The first term in the parentheses sums the contributions from the four RPs of a diagonal and increases from about $16$ to $18\un{\%}$ from the lowest to the highest $|\theta_y^*|$. These values are higher than in previous analyses (e.g.~Section 5.2.4 in \cite{8tev-90m}) due the contribution from the far RPs in the left arm. The reconstruction efficiency in these pots is decreased by showers initiated by beam halo protons in the horizontal RPs upstream.
+The first term in the parentheses sums the contributions from the four RPs of a diagonal and increases from about $16$ to $18\un{\%}$ from the lowest to the highest $|\theta_y^*|$. These values are higher than in the previous analyses (e.g.~Section 5.2.4 in \cite{8tev-90m}) due the contribution from the far RPs in the left arm. The reconstruction efficiency in these pots is decreased by showers initiated by beam halo protons in the horizontal RPs upstream.
 
 %The second term amounts to about $3\un{\%}$.
 
