--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -1,5 +1,3 @@
-% TODO: order
-
 \bibitem{plb43}
 	\Name{U.~Amaldi et al.}
 	\Review{Phys.~Lett.~B}{43}{1973}{231 -- 236}.
@@ -46,7 +44,7 @@
 
 \bibitem{wy68}
 	\Name{G.~B.~West and D.~R.~Yennie}
-	\Review{Phys. Rev.}{172}{1968}{1413 -- 1422}
+	\Review{Phys. Rev.}{172}{1968}{1413 -- 1422}.
 	%title     = "Coulomb interference in high-energy scattering",
 	%doi       = "10.1103/PhysRev.172.1413",
 
@@ -117,7 +115,7 @@
 
 \bibitem{block96}
 	\Name{M.~M.~Block}
-	\Review{Phys.~Rev.~D}{54}{1996}{4337--4343}
+	\Review{Phys.~Rev.~D}{54}{1996}{4337--4343}.
 	%title = {Are we really measuring the phase of the nuclear scattering amplitude?},
 	%doi = {10.1103/PhysRevD.54.4337},
 	
@@ -125,6 +123,12 @@
 	\Name{J.~Ka\v spar}
 	PhD Thesis, CERN-THESIS-2011-214,
 	\url{http://cdsweb.cern.ch/record/1441140}.
+
+\bibitem{kklp11}
+	\Name{J.~Ka\v spar, V.~Kundr\' at, M.~V.~Lokaj\' i\v cek and J.~Proch\' azka}
+	\Review{Nucl.~Phys.~B}{843}{2011}{84 -- 106}.
+	%title = "Phenomenological models of elastic nucleon scattering and predictions for \{LHC\} ",
+	%doi = "http://dx.doi.org/10.1016/j.nuclphysb.2010.09.020",
 
 \bibitem{elegent}
 	\Name{J.~Ka\v spar}
@@ -138,6 +142,12 @@
 	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
 	\Review{Europhys.~Lett.}{95}{2011}{41001}.
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
+
+\bibitem{martin97}
+	\Name{A.~Martin}
+	\Review{Phys.~Lett.~B}{404}{1997}{137 -- 140}.
+	%title = "A theorem on the real part of the high-energy scattering amplitude near the forward direction ",
+	%doi = "http://dx.doi.org/10.1016/S0370-2693(97)00510-8",
 
 \bibitem{bailly87}
 	\Name{J.~L.~Bailly \etal{}~(EHS-RCBC Collaboration)}
@@ -158,6 +168,12 @@
 	%title = {DESCRIPTION OF HIGH-ENERGY ELASTIC HADRON SCATTERING IN BOTH THE COULOMB AND HADRONIC DOMAINS},
 	%number = {28},
 	%doi = {10.1142/S021773239600223X},
+
+\bibitem{cahn82}
+	\Name{R.~Cahn}
+	\Review{Z.~Phys.~C}{15}{1982}{253 -- 260}.
+	%title={Coulombic-hadronic interference in an eikonal model},
+	%doi={10.1007/BF01475009},
 
 \bibitem{kl05}
 	\Name{V.~Kundr\' at and M. Lokaj\' i\v cek}
@@ -203,21 +219,3 @@
 \bibitem{pdg} 
 	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
 	\Review{J.~Phys.}{G37}{2010}{075021}.
-
-\bibitem{kklp11}
-	\Name{J.~Ka\v spar, V.~Kundr\' at, M.~V.~Lokaj\' i\v cek and J.~Proch\' azka}
-	\Review{Nucl.~Phys.~B}{843}{2011}{84 -- 106}.
-	%title = "Phenomenological models of elastic nucleon scattering and predictions for \{LHC\} ",
-	%doi = "http://dx.doi.org/10.1016/j.nuclphysb.2010.09.020",
-
-\bibitem{cahn82}
-	\Name{R.~Cahn}
-	\Review{Z.~Phys.~C}{15}{1982}{253 -- 260}
-	%title={Coulombic-hadronic interference in an eikonal model},
-	%doi={10.1007/BF01475009},
-
-\bibitem{martin97}
-	\Name{A.~Martin}
-	\Review{Phys.~Lett.~B}{404}{1997}{137 -- 140}.
-	%title = "A theorem on the real part of the high-energy scattering amplitude near the forward direction ",
-	%doi = "http://dx.doi.org/10.1016/S0370-2693(97)00510-8",
