PH preprint updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11514 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/authorlist_cern.tex
+++ b/2013/1km paper/authorlist_cern.tex
@@ -69,4 +69,5 @@
 \end{Authlist}
 
 \DeclareInstitutes
+\hbox to\hsize{\strut\hss} % trick to make institute list stop on the front page
 \DeclareExternalInstitutes
