--- a/2013/1km paper/abstract.tex
+++ b/2013/1km paper/abstract.tex
@@ -1,19 +1,18 @@
 The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
 scattering at the centre-of-mass energy 
 $\sqrt{s}=8\,$TeV and four-momentum transfers squared, $|t|$, from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
-Near the lower end of the $t$-interval, for
-$|t| \lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
+Near the lower end of the $t$-interval the differential cross-section is 
 sensitive to the 
 interference between the hadronic and the electromagnetic scattering amplitudes.
 This article presents the elastic cross-section measurement and the constraints it 
-imposes on the functional forms of the interference term and of modulus and
+imposes on the functional forms of the modulus and
 phase of the hadronic elastic amplitude. The data exclude the traditional 
-Simplified West and Yennie interference formula requiring a constant 
+Simplified West and Yennie interference formula that requires a constant 
 phase and a purely exponential modulus of the hadronic amplitude. 
-For non-exponential parametrisations of the hadronic 
-modulus the data are compatible with hadronic phase 
-functions producing either centrally or peripherally dominated impact 
-parameter distributions in elastic scattering events. In both cases, 
+For parametrisations of the hadronic modulus with second- or third-order 
+polynomials in the exponent, the data are compatible with hadronic phase 
+functions giving either central or peripheral behaviour in the impact 
+parameter picture of elastic scattering. In both cases, 
 the $\rho$-parameter is found to be $0.12 \pm 0.03$. 
 The results for the total hadronic 
 cross-section are $\sigma_{\rm tot} = (102.9 \pm 2.3)$\,mb and 
