--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -2,13 +2,13 @@
 	\AddAuthor{G.~Antchev}{}{}{a}%
 	\AddAuthor{P.~Aspell}{9}{}{}%
 	\AddAuthor{I.~Atanassov}{}{}{a}%
-	\AddAuthor{V.~Avati}{9}{}{}%
+	\AddAuthor{V.~Avati}{8}{9}{}%
 	\AddAuthor{J.~Baechler}{9}{}{}%
 	\AddAuthor{V.~Berardi}{5b}{5a}{}%
 	\AddAuthor{M.~Berretti}{9}{7b}{}%
 	\AddAuthor{E.~Bossini}{7b}{}{}%
 	\AddAuthor{U.~Bottigli}{7b}{}{}%
-	\AddAuthor{M.~Bozzo}{6a}{}{}%
+	\AddAuthor{M.~Bozzo}{6a}{6b}{}%
 	\AddAuthor{P.~Broul\'{i}m}{1a}{}{}%
 	\AddAuthor{A.~Buzzo}{6a}{}{}%
 	\AddAuthor{F.~S.~Cafagna}{5a}{}{}%
@@ -32,18 +32,19 @@
 	\AddAuthor{J.~Hammerbauer}{1a}{}{}%
 	\AddAuthor{J.~Heino}{3a}{}{}%
 	\AddAuthor{A.~Karev}{9}{}{}%
-	\AddAuthor{J.~Ka\v{s}par}{1b}{9}{}%
+%	\AddAuthor{J.~Ka\v{s}par}{1b}{9}{}%
+	\AddCorrespondingAuthor{J.~Ka\v{s}par}{1b}{9}{}{Corresponding author at: CERN, Geneva, Switzerland.}{jan.kaspar@cern.ch}%
 	\AddAuthor{J.~Kopal}{1b}{}{}%
 	\AddAuthor{V.~Kundr\'{a}t}{1b}{}{}%
 	\AddAuthor{S.~Lami}{7a}{}{}%
 	\AddAuthor{G.~Latino}{7b}{}{}%
 	\AddAuthor{R.~Lauhakangas}{3a}{}{}%
 	\AddAuthor{R.~Linhart}{1a}{}{}%
-	\AddAuthor{E.~Lippmaa}{2}{}{}%
+	\AddAuthor{E.~Lippmaa}{2}{}{+}%
 	\AddAuthor{J.~Lippmaa}{2}{}{}%
 	\AddAuthor{M.~V.~Lokaj\'{\i}\v{c}ek}{1b}{}{}%
 	\AddAuthor{L.~Losurdo}{7b}{}{}%
-	\AddAuthor{M.~Lo~Vetere}{6b}{6a}{}%
+	\AddAuthor{M.~Lo~Vetere}{6b}{6a}{+}%
 	\AddAuthor{F.~Lucas~Rodr\'{i}guez}{9}{}{}%
 	\AddAuthor{M.~Macr\'{\i}}{6a}{}{}%
 	\AddAuthor{A.~Mercadante}{5a}{}{}%
@@ -91,8 +92,8 @@
 
 \def\DeclareInstitutes{%
 	\AddInstitute{1a}{University of West Bohemia, Pilsen, Czech Republic.}
-	\AddInstitute{1b}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
-	\AddInstitute{1c}{Czech Technical University, Praha, Czech Republic.}
+	\AddInstitute{1b}{Institute of Physics of the Academy of Sciences of the Czech Republic, Prague, Czech Republic.}
+	\AddInstitute{1c}{Czech Technical University, Prague, Czech Republic.}
 	\AddInstitute{2}{National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}
 	\AddInstitute{3a}{Helsinki Institute of Physics, Helsinki, Finland.}
 	\AddInstitute{3b}{Department of Physics, University of Helsinki, Helsinki, Finland.}
@@ -120,4 +121,5 @@
 	\AddExternalInstitute{e}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation.}
 	\AddExternalInstitute{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
 	%\AddExternalInstitute{g}{IRFU-SPP, CEA - Saclay, France}
+	\AddExternalInstitute{+}{Deceased.}
 }
