--- a/2013/1km paper/authorlist_npb.tex
+++ b/2013/1km paper/authorlist_npb.tex
@@ -32,6 +32,43 @@
 		\fi
 	\fi
 }
+%----------------------------------------------------------------------------------------------------
+% Add an author
+% USAGE: \AddCorrespondingAuthor{name}{primary affiliation}{secondary affiliation}{external affiliation}{footnote text}{email}
+
+\def\AddCorrespondingAuthor#1#2#3#4#5#6{%
+	\def\Name{#1}%
+	\def\PriAf{#2}%
+	\def\SecAf{#3}%
+	\def\ExtAf{#4}%
+	\def\empty{}%
+	
+	\ifx\PriAf\empty
+		% no primary affiliation, only external
+		\author{#1\fnref{#4}\corref{CA}}%
+	\else
+		\ifx\SecAf\empty
+			\ifx\ExtAf\empty
+				% only primary affiliation
+				\author[#2]{#1\corref{CA}}%
+			\else
+				% primary and external affiliation
+				\author[#2]{#1\fnref{#4}\corref{CA}}%
+			\fi
+		\else
+			\ifx\ExtAf\empty
+				% primary and secondary affiliation
+				\author[#2,#3]{#1\corref{CA}}%
+			\else
+				% primary, secondary and external affiliation
+				\author[#2,#3]{#1\fnref{#4}\corref{CA}}%
+			\fi
+		\fi
+	\fi
+
+	\ead{#6}%
+	\cortext[CA]{#5}%
+}
 
 %----------------------------------------------------------------------------------------------------
 % Add a TOTEM institute
