--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -4,9 +4,8 @@
 Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction is commonly neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical of elastic scattering. In this context, the strong interaction is traditionally called `nuclear' or `hadronic' and the electromagnetic one `Coulomb'. In quantum-theory description, each of these interactions is described by a scattering amplitude, nuclear ${\cal A}^{\rm N}(t)$ and Coulomb ${\cal A}^{\rm C}(t)$. Moreover, the combined scattering amplitude receives a third contribution reflecting Feynman diagrams with both strong and electromagnetic exchanges. This term, together with the complex character of the scattering amplitudes, describes the effects of Coulomb-nuclear interference (CNI) in the differential cross-section. Since the Coulomb amplitude is known, measuring the CNI gives access to the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The CNI effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e.~-- for typical LHC centre-of-mass energies of a few TeV -- near $|t| \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to the nuclear phase, $\arg {\cal A}^{\rm N}(t)$, is limited to a region at very small $|t|$, making difficult any conclusions on the 
 functional form of the phase.
 
-In the analyses of past experiments -- see e.g.~\cite{plb43,plb66,npb141,prl47,plb115,plb120,plb128,npb262} 
-(ISR),~\cite{plb198,plb316} ($\rm S\bar{p}pS$),~\cite{prl68} (Tevatron) --
-a strongly simplified interference formula was used. This so-called
+In the analyses of past experiments -- see e.g.~\cite{plb43,plb66,npb141,prl47,plb115,plb120,plb128,npb262} (ISR),~\cite{plb198,plb316} ($\rm S\bar{p}pS$),~\cite{prl68} (Tevatron) --
+a simplified interference formula was used. This so-called
 Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
 constant phase for all $t$ (see the discussion in 
