rudolph the red nose reindeer
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11527 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -10,7 +10,7 @@ composed of a forward proton spectrometer (Roman Pots, RPs) and the
 forward tracking telescopes T1 and T2. 
 A complete description of the TOTEM detector instrumentation 
 and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}. 
-The data analysed here come from the RPs only. A RP is a movable beam-pipe
+The data analysed here come from the RPs only. An RP is a movable beam-pipe
 insertion capable of approaching the LHC beam to less than a millimeter, in 
 order to detect protons with scattering angles of only a few microradians. 
 The proton spectrometer is organised in two RP stations: one on the left side of the IP 
@@ -32,7 +32,7 @@ Since elastic scattering events consist of two collinear protons emitted in
 opposite directions, the detected events can have two topologies, called 
 diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
-This report uses a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
+This article uses a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
 
 \begin{figure}
 \begin{center}
@@ -40,7 +40,7 @@ This report uses a reference frame where $x$ denotes the horizontal axis (pointi
 \hfil
 \includegraphics{fig/stationScheme.pdf}
 \caption{%
-Left: schematic view of the RP stations on both sides of IP5 with two proton tracks from an elastic event. Right: Schematic view of the silicon detector positions in a RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
+Left: schematic view of the RP stations on both sides of IP5 with two proton tracks from an elastic event. Right: Schematic view of the silicon detector positions in an RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
 }
 \label{fig:rpsketch}
 \end{center}
