--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -3,7 +3,7 @@
 
 The results reported here are based on data taken in October 2012 
 during a dedicated LHC proton fill (3216)
-with the very special beam properties described in the previous section.
+with the special beam properties described in the previous section.
 
 The vertical RPs approached the beam centre to only 3 times the beam width, $\sigma_{y}$, resulting in an acceptance for $|t|$-values down to $6 \times 10^{-4}\,\rm GeV^{2}$. The exceptionally close distance was possible due to the low beam intensity in this special beam operation: each beam contained only two colliding bunches and one non-colliding bunch for background monitoring, each with $10^{11}$ protons. A novel collimation strategy was applied to keep the beam halo background under control. As a first step, the primary 
 collimators (TCP) in the LHC betatron cleaning insertion (point 7) scraped the beam down to $2\,\sigma_{y}$; then the collimators were retracted to $2.5\,\sigma_{y}$, thus creating a $0.5\,\sigma_{y}$ gap between
@@ -29,7 +29,7 @@ $10\,\sigma_{y}$ (``distant diagonal'') was chosen. The distant diagonal provide
 The horizontal RPs were only needed for the data-based alignment and therefore placed at a safe distance of $10\,\sigma_{x} \approx 7.5$\,mm, close enough to have an overlap with the vertical RPs (Figure~\ref{fig:rpsketch}, right).
 
 The events collected were triggered by a logical \textit{OR} of: inelastic 
-trigger (activity in either arm of T1 or T2), double-arm proton trigger 
+trigger (at least one charged particle in either arm of T2), double-arm proton trigger 
 (coincidence of any RP left of IP5 and any RP right of IP5) and zero-bias trigger (random bunch crossings) for calibration purposes.
 
 In the close and distant diagonals a total of 190k and 162k elastic event candidates have been tagged, respectively.
