--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -234,13 +234,13 @@ The correction for the above limitations includes two contributions -- a geometr
 \begin{equation}
 {\cal A}(\theta^*, \theta_y^*) = {\cal A}_{\rm geom}(\theta^*)\ {\cal A}_{\rm fluct}(\theta_y^*)\ .
 \end{equation}
-The fiducial cuts in $\theta_x^*$ have been been given sufficient margin from the region with uncertain efficiency to render the respective fluctuation correction negligible.
+The fiducial cuts in $\theta_x^*$ have been given sufficient margin from the region with uncertain efficiency to render the respective fluctuation correction negligible.
 
 The calculation of the geometrical correction ${\cal A}_{\rm geom}$ is based on the azimuthal symmetry of elastic scattering, experimentally verified for the data within acceptance. As shown in Figure \ref{fig:acc corr princ}, for a given value of $\theta^*$ the correction is given by:
 \begin{equation}
 \label{eq:acc geom}
 {\cal A_{\rm geom}}(\theta^*) = {
-	\hbox{full arc length}\over 
+	\hbox{full circumference}\over 
 	\hbox{arc length within acceptance}
 } \ .
 \end{equation}
