--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -34,11 +34,11 @@
 
 \renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
 
-\PHnumber{XXXX}
-\PHdate{XXXX}
+\PHnumber{CERN-PH-EP-2015-325}
+\PHdate{17 December 2015}
 
-\EXPnumber{XXXX}
-\EXPdate{XXXX}
+\EXPnumber{TOTEM-2015-002}
+\EXPdate{17 December 2015}
 
 \title{Measurement of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the Coulomb-Nuclear Interference Region -- Determination of the $\mathbf{\rho}$-Parameter and the Total Cross-Section}
 
