is it finished?
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11537 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -5,8 +5,7 @@ The Coulomb-nuclear interference (CNI) can be used to probe the nuclear componen
 
 For the modulus, a relevant question is whether the earlier reported non-exponentiality of the differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives a sizeable contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested; for each of them the $\rho$ parameter (representative for the phase value at $t = 0$ according to Eq.~(\ref{eq:rho def})) will be determined.
 
-Section~\ref{sec:cni framework} outlines the theoretical concepts needed to describe the CNI effects. Section~\ref{sec:cni anal proc} provides details on fitting procedures used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss the fit results for two relevant physics alternatives: purely exponential and non-exponential nuclear modulus.
-
+Section~\ref{sec:cni framework} outlines the theoretical concepts needed to describe the CNI effects. Section~\ref{sec:cni anal proc} provides details on fitting procedures used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss the fit results for two relevant alternatives in the description of the nuclear modulus: either exponential functions with exponents linear in $t$ (called ``purely exponential'') or exponential functions with higher-degree polynomials of $t$ in the exponent (called ``non-exponential'').
 
 
 %----------------------------------------------------------------------------------------------------
@@ -194,7 +193,7 @@ The fits have shown low sensitivity to several of the above presented choices, s
 
 One of the goals of this study is to probe the origin of the differential cross-section non-exponentiality reported earlier~\cite{8tev-90m}. Therefore, the following two classes of fits were considered.
 \begin{itemize}
-\item Section \ref{sec:fit exp1}: fits with purely-exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality can come from the CNI effects only.
+\item Section \ref{sec:fit exp1}: fits with purely exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality can come from the CNI effects only.
 \item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality without the CNI effects. Here, the non-exponentiality may be due to the nuclear modulus, CNI effects or both.
 \end{itemize}
 For each of these nuclear modulus cases, the following two phase parametrisation were considered:
