all comments processed
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11538 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -143,11 +143,11 @@
 	\Review{Europhys.~Lett.}{95}{2011}{41001}.
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
 
-\bibitem{martin97}
-	\Name{A.~Martin}
-	\Review{Phys.~Lett.~B}{404}{1997}{137 -- 140}.
-	%title = "A theorem on the real part of the high-energy scattering amplitude near the forward direction ",
-	%doi = "http://dx.doi.org/10.1016/S0370-2693(97)00510-8",
+%\bibitem{martin97}
+%	\Name{A.~Martin}
+%	\Review{Phys.~Lett.~B}{404}{1997}{137 -- 140}.
+%	%title = "A theorem on the real part of the high-energy scattering amplitude near the forward direction ",
+%	%doi = "http://dx.doi.org/10.1016/S0370-2693(97)00510-8",
 
 \bibitem{bailly87}
 	\Name{J.~L.~Bailly \etal{}~(EHS-RCBC Collaboration)}
