--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -34,7 +34,7 @@
 
 \renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
 
-\PHnumber{CERN-PH-EP-2015-325}
+\PHnumber{2015-325}
 \PHdate{17 December 2015}
 
 \EXPnumber{TOTEM-2015-002}
