--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -203,9 +203,11 @@
 	\Review{J.~Phys.}{G42}{2015}{2, 025003}.
 	%doi = http://dx.doi.org/10.1088/0954-3899/42/2/025003
 
-\bibitem{fagundes11}
-	\Name{D. A. Fagundes, E. G. S. Luna, M. J. Menon, A. A. Natale}
-	LISHEP 2011, Worshop on LHC -- Present and Future, Rio de Janeiro, RJ, July 05-10, 2011, Brazil.
+\bibitem{fagundes12}
+	%Aspects of a dynamical gluon mass approach to elastic hadron scattering at LHC
+	\Name{D.~A.~Fagundes, E.~G.~S.~Luna, M.~J.~Menon and A.~A.~Natale}
+	\Review{Nucl.~Phys.~A}{886}{2012}{40 -- 70}
+	%http://dx.doi.org/10.1016/j.nuclphysa.2012.05.002
 
 \bibitem{block12}
 	\Name{M.~M.~Block and F.~Halzen}
